# SH-HTTP-Server

./: Cargo.toml  readme.md
examples/: server.rs
src/: handlers.rs  lib.rs
