[package]
name = "SH-HTTP-Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
smart-house = { git = "https://github.com/inspired2/smart-house.git"}
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
tokio = {version = "*", features = ["full"]}